// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea add className 1`] = `
.lights-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  display: block;
  height: 80px;
  padding: 2px 6px;
  resize: vertical;
  width: 100%;
}

<textarea
  className="lights-0 foo"
  onChange={[Function]}
/>
`;

exports[`Textarea empty 1`] = `
.lights-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  display: block;
  height: 80px;
  padding: 2px 6px;
  resize: vertical;
  width: 100%;
}

<textarea
  className="lights-0"
  onChange={[Function]}
/>
`;
